fix text center alignment

--- a/airbyte-webapp/src/components/ui/Toast/Toast.module.scss
+++ b/airbyte-webapp/src/components/ui/Toast/Toast.module.scss
@@ -78,6 +78,10 @@ $toast-bottom-margin: 27px;
   border-radius: 50%;
 }
 
+.textContainer {
+  align-self: center;
+}
+
 .text {
   line-height: 17px;
   text-align: left;
